# gcda

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
daxis/: __init__.py  adapters.py  cli.py  core.py  report.py
examples/: pandas_csv.py  pytorch_dataloader.py  quickstart.py  sklearn_digits.py
gcda/: __init__.py  adapters.py  cli.py  core.py  report.py
tests/: test_adapters.py  test_core.py  test_edges.py  test_report.py
